--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -30,3 +30,7 @@ $fs-body-mobile: 0.8125rem;
 //Note: fs = "Font Size"
 $fs-page-header-tablet: 2.25rem;
 $fs-body-tablet: 0.875rem;
+
+/* Desktop Specific Styling */
+//Note: fs = "Font Size"
+$fs-page-header-desktop: 2rem;
